# evolutionary-neural-network

./: .gitignore  Algorithms.md  CLOUD_SETUP.md  COLAB_2_CELL_SOLUTION.py  COLAB_COMPLETE_2CELL.py  COLAB_COMPLETE_WORKING.py  COLAB_FINAL_COMPLETE.py  COLAB_FINAL_FIXED.py  COLAB_FINAL_WORKING.py  COLAB_FIX_GUIDE.md  COLAB_INDIA_NIFTY50.py  COLAB_INSTRUCTIONS.md  COLAB_NO_ATTENTION.py  COLAB_PASTE_AND_RUN.py  COLAB_PROFESSIONAL.py  COLAB_README.md  COLAB_SIMPLE_PATCH.py  COLAB_TRAINING_GUIDE.md  COLAB_TRAIN_FINAL.py  CONTRIBUTING.md  INVESTOR_PITCH.txt  LICENSE  PROFESSIONAL_GUIDE.md  README.md  backtest_final_log.txt  backtest_full_output.txt  backtest_options.py  backtest_options_v2.py  brain_weights.pkl  cloud_signal.py  colab_setup_cell.py  colab_simple_train.py  colab_ultimate_training.py  create_dummy_brain.py  debug_log.txt  debug_trace.txt  debug_trace_v2.txt  debug_trace_v3.txt  evaluate_benchmarks.py  evotrader_brain.pkl  (+47 more)
.github/workflows/: daily_signal.yml  options_daily_signal.yml
brain_versions/: training_report.txt  ultimate_brain_colab.pkl
brain_versions/v1.0/: brain.pkl  metadata.json
brain_versions/v1.1/: metadata.json
brain_versions/v1.2/: brain.pkl  metadata.json
brain_versions/v1.4/: brain.pkl  metadata.json
brain_versions/v1.5/: brain.pkl  metadata.json
brain_versions/v1.6/: brain.pkl  metadata.json
brain_versions/v1.7/: brain.pkl  metadata.json
brain_versions/v1.8/: brain.pkl  metadata.json
brain_versions/v1.8_REJECTED/: brain.pkl  metadata.json
data_cache/: BTC-USD_1d.csv  BTC-USD_1h_20240201_20251230.csv  ^NSEI_1d.csv
evonet/: __init__.py  __main__.py  config.py
evonet/api/: main.py
evonet/core/: __init__.py  evolution.py  gpu_backend.py  layers.py  losses.py  memory.py  mutations.py  network.py  neuron.py
evonet/data/: __init__.py  feature_selection.py  (+2 more)
tests/: compliance_audit.py  conftest.py  cross_field_validation.py  cto_results.txt  cto_results_v2.txt  cto_validation_suite.py  debug_aapl.py  debug_orchestrator.py  deep_backtest.py  field_proof_real_data.py  integration_validator.py  senior_audit.py  test_gpu_evolution.py  test_integration.py  test_losses.py  test_mutations.py  test_neuron.py  test_preprocessing.py
(+15 files in other folders)
